--- a/main.html
+++ b/main.html
@@ -11,7 +11,8 @@
     <script type="text/javascript" src="./script.js">
 </script>
 </body>
-<h1>Hello World </h1>
-	<h2>Introducing the Accio Ipsum </h2>
-<p>Accio ipsum dolor sit amet, join course, solve assignments, get placed above 5 lpa and live life king size.</p>
+<h1>Hello World </h1><br>
+	<h2>Introducing the Accio Ipsum </h2><br>
+<p>Accio ipsum dolor sit amet, join course, solve assignments, 
+	get placed above 5 lpa and live life king size.</p>
 </html>
